HighContrast: Avoid expander↔combobox interference
as per commit b4b9aa1e5fab6a1f8c27b768813ab4ed04f3cd6f

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2787,7 +2787,7 @@ row.activatable {
  *************/
 
 expander {
-  & arrow {
+  title > arrow {
     min-width: 16px;
     min-height: 16px;
     -gtk-icon-source: -gtk-icontheme('pan-end-symbolic');
